--- a/index.html
+++ b/index.html
@@ -1,74 +1,102 @@
-<!-- HEADER -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Perpustakaan Aura</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Aura</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-    }
-    header {
-      background-color: #005555;
-      padding: 15px 30px;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .logo {
-      font-size: 24px;
-      font-weight: bold;
-    }
-    nav {
-      display: flex;
-      gap: 20px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .search-box {
-      position: relative;
-    }
-    .search-box input {
-      padding: 5px 10px;
-      border-radius: 20px;
-      border: none;
-      outline: none;
-    }
-    .menu-container {
-      display: flex;
-      align-items: center;
-      gap: 30px;
-    }
-  </style>
+/* Style untuk menu navigasi */
+nav ul li a {
+  color: #800000;
+  text-decoration: none;
+  padding: 10px 15px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+nav ul li a:hover {
+  background-color: #800000; /* maroon */
+  color: #FFF5E1; /* krem */
+  border-radius: 5px;
+}
+
+/* Container untuk event */
+.event-container {
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  padding: 20px 0;
+}
+
+.event-card {
+  min-width: 300px;
+  background-color: #FFF5E1; /* krem */
+  border: 1px solid #800000; /* maroon */
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
+  flex-shrink: 0;
+}
+
+.event-card h3 {
+  color: #800000;
+  margin-bottom: 10px;
+}
+
+.event-card p {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.event-card a {
+  display: inline-block;
+  background-color: #800000; /* maroon */
+  color: #FFF5E1; /* krem */
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.event-card a:hover {
+  background-color: #a52a2a; /* maroon yang sedikit lebih terang saat hover */
+  color: #ffffff;
+}
+</style>
 </head>
 <body>
-
-<header>
-  <div class="logo">PERPUSTAKAAN AURA</div>
-  <div class="menu-container">
-    <nav>
-      <a href="index.html">Beranda</a>
-      <a href="tentang-saya.html">Tentang Saya</a>
-      <a href="hubungi.html">Hubungi Kami</a>
-      <a href="koleksi.html">Koleksi</a>
-      <a href="tabel.html">Tabel Perkalian</a>
-      <a href="form-kunjungan.html">Formulir Kunjungan</a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">PERPUSTAKAAN AURA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Formulir_kunjungan.php">Formulir Kunjungan</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <div class="search-box">
-      <input type="text" placeholder="Cari di sini..." />
-    </div>
-  </div>
-</header>
 
     <div class="container">
         <section>
