--- a/index.html
+++ b/index.html
@@ -1,96 +1,90 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perpustakaan Aura</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Aura</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: #fff;
-    }
+/* Style untuk menu navigasi */
+nav ul li a {
+  color: #800000;
+  text-decoration: none;
+  padding: 10px 15px;
+  transition: background-color 0.3s, color 0.3s;
+}
 
-    .header {
-      background-color: #faebd7; /* krem */
-      color: #800000; /* merah tua */
-      padding: 15px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      border-bottom: 2px solid #800000;
-    }
+nav ul li a:hover {
+  background-color: #800000; /* maroon */
+  color: #FFF5E1; /* krem */
+  border-radius: 5px;
+}
 
-    .logo-left {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+/* Container untuk event */
+.event-container {
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  padding: 20px 0;
+}
 
-    .logo-left img {
-      height: 40px;
-    }
+.event-card {
+  min-width: 300px;
+  background-color: #FFF5E1; /* krem */
+  border: 1px solid #800000; /* maroon */
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
+  flex-shrink: 0;
+}
 
-    .center-title {
-      flex: 1;
-      text-align: center;
-      font-size: 22px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      color: #800000;
-    }
+.event-card h3 {
+  color: #800000;
+  margin-bottom: 10px;
+}
 
-    nav {
-      background-color: #faebd7;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      border-top: 1px solid #d3b8a0;
-    }
+.event-card p {
+  color: #333;
+  margin-bottom: 10px;
+}
 
-    nav a {
-      color: #800000;
-      text-decoration: none;
-      padding: 12px 18px;
-      display: block;
-      transition: background 0.3s, color 0.3s;
-    }
+.event-card a {
+  display: inline-block;
+  background-color: #800000; /* maroon */
+  color: #FFF5E1; /* krem */
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: background-color 0.3s, color 0.3s;
+}
 
-    nav a:hover {
-      background-color: #f2d9c4;
-      color: #000;
-    }
-
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
-      .center-title {
-        font-size: 18px;
-      }
-    }
-  </style>
+.event-card a:hover {
+  background-color: #a52a2a; /* maroon yang sedikit lebih terang saat hover */
+  color: #ffffff;
+}
+</style>
 </head>
 <body>
-
-<header class="header">
-  <div class="logo-left">
-    <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
+   <header class="header">
+  <div class="header-overlay">
+    <div class="logo-left">
+      <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
+    </div>
+    <div class="center-title">PERPUSTAKAAN AURA</div>
+    <nav class="nav-menu">
+      <ul>
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+        <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li><a href="koleksi.html">Koleksi</a></li>
+        <li><a href="tabel.php">Tabel Perkalian</a></li>
+        <li><a href="Formulir_kunjungan.php">Formulir Kunjungan</a></li>
+      </ul>
+    </nav>
   </div>
-  <div class="center-title">PERPUSTAKAAN AURA</div>
 </header>
-
-<nav>
-  <a href="index.html">Beranda</a>
-  <a href="tentang-saya.html">Tentang Saya</a>
-  <a href="hubungi.html">Hubungi Kami</a>
-  <a href="koleksi.html">Koleksi</a>
-  <a href="tabel.html">Tabel Perkalian</a>
-  <a href="form-kunjungan.html">Formulir Kunjungan</a>
-</nav>
 
     <div class="container">
         <section>
