--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <style>
 /* Style untuk menu navigasi */
 nav ul li a {
-  color: #800000;
+  color: #FFF5E1;
   text-decoration: none;
   padding: 10px 15px;
   transition: background-color 0.3s, color 0.3s;
 }
 
 nav ul li a:hover {
-  background-color: #800000; /* maroon */
-  color: #FFF5E1; /* krem */
+  background-color: #FFF5E1; /* krem */
+  color: #800000; /* maroon */
   border-radius: 5px;
 }
 
@@ -31,8 +31,8 @@ nav ul li a:hover {
 
 .event-card {
   min-width: 300px;
-  background-color: #FFF5E1; /* krem */
-  border: 1px solid #800000; /* maroon */
+  background-color: #800000; /* maroon */
+  border: 1px solid #FFF5E1; /* krem */
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
