--- a/index.html
+++ b/index.html
@@ -1,85 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Aura</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  <style>
-/* Style untuk menu navigasi */
-nav ul li a {
-  color: #FFF5E1;
-  text-decoration: none;
-  padding: 10px 15px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-nav ul li a:hover {
-  background-color: #FFF5E1; /* krem */
-  color: #800000; /* maroon */
-  border-radius: 5px;
-}
-
-/* Container untuk event */
-.event-container {
-  display: flex;
-  gap: 20px;
-  overflow-x: auto;
-  padding: 20px 0;
-}
-
-.event-card {
-  min-width: 300px;
-  background-color: #800000; /* maroon */
-  border: 1px solid #FFF5E1; /* krem */
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
-  flex-shrink: 0;
-}
-
-.event-card h3 {
-  color: #800000;
-  margin-bottom: 10px;
-}
-
-.event-card p {
-  color: #333;
-  margin-bottom: 10px;
-}
-
-.event-card a {
-  display: inline-block;
-  background-color: #800000; /* maroon */
-  color: #FFF5E1; /* krem */
-  padding: 10px 15px;
-  text-decoration: none;
-  border-radius: 5px;
-  margin-top: 10px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.event-card a:hover {
-  background-color: #a52a2a; /* maroon yang sedikit lebih terang saat hover */
-  color: #ffffff;
-}
-</style>
-</head>
-<body>
- <!DOCTYPE html>
-<html lang="id">
-<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perpustakaan Aura</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: #fff;
-    }
+/* Style untuk menu navigasi */
+      
 
     .header {
       background-color: #faebd7; /* krem */
@@ -141,11 +71,54 @@ nav ul li a:hover {
         font-size: 18px;
       }
     }
-  </style>
+
+/* Container untuk event */
+.event-container {
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  padding: 20px 0;
+}
+
+.event-card {
+  min-width: 300px;
+  background-color: #FFF5E1; /* krem */
+  border: 1px solid #800000; /* maroon */
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
+  flex-shrink: 0;
+}
+
+.event-card h3 {
+  color: #800000;
+  margin-bottom: 10px;
+}
+
+.event-card p {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.event-card a {
+  display: inline-block;
+  background-color: #800000; /* maroon */
+  color: #FFF5E1; /* krem */
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.event-card a:hover {
+  background-color: #a52a2a; /* maroon yang sedikit lebih terang saat hover */
+  color: #ffffff;
+}
+</style>
 </head>
 <body>
-
-<header class="header">
+ <header class="header">
   <div class="logo-left">
     <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
   </div>
@@ -160,10 +133,6 @@ nav ul li a:hover {
   <a href="tabel.html">Tabel Perkalian</a>
   <a href="form-kunjungan.html">Formulir Kunjungan</a>
 </nav>
-
-</body>
-</html>
-
 
     <div class="container">
         <section>
