--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       
 
     .header {
-      background-color: #faebd7; /* krem */
-      color: #800000; /* merah tua */
+      background-color: #800000; /* maroon */
+      color: #faebd7; /* krem */
       padding: 15px 20px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       flex-wrap: wrap;
-      border-bottom: 2px solid #800000;
+      border-bottom: 2px solid #faebd7;
     }
 
     .logo-left {
@@ -38,19 +38,19 @@
       font-size: 22px;
       font-weight: bold;
       letter-spacing: 1px;
-      color: #800000;
+      color: #faebd7;
     }
 
     nav {
-      background-color: #faebd7;
+      background-color: #800000;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      border-top: 1px solid #d3b8a0;
+      border-top: 1px solid #d3b8a0; /* krem butek */
     }
 
     nav a {
-      color: #800000;
+      color: #faebd7;
       text-decoration: none;
       padding: 12px 18px;
       display: block;
@@ -58,7 +58,7 @@
     }
 
     nav a:hover {
-      background-color: #f2d9c4;
+      background-color: #f2d9c4; /* krem kepinkan */
       color: #000;
     }
 
